2003-12-18  Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-process-region): Set environment variable
	LANGUAGE as well.  GNU gettext gives precedence to LANGUAGE over
	LC_ALL, when different language code is specified.  Thanks to
	Tatsuya Kinoshita <tats@vega.ocn.ne.jp>.
	[cf. <emacs-mime-ja:1599>]

2003-12-17  Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-messages-locale): New user option.
	(pgg-gpg-process-region): Set environment variable LC_ALL when
	pgg-gpg-messages-locale is specified.

	* pgg-def.el (pgg-messages-locale): New user option.

	* mime-pgp.el (mime-verify-application/pgp-signature): Copy
	messages from pgg-errors-buffer.
	(mime-add-application/pgp-keys): Ditto.

2005-09-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-view.el (mime-view-insert-fontified-text-content): Disable
	support modes.

2005-06-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-view.el (mime-display-text/richtext): Withdraw the last
	change.
	(mime-display-text/enriched): Ditto.

2005-06-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-view.el (mime-display-text/richtext): Turn off
	adaptive-fill-mode while executing richtext-decode.
	(mime-display-text/enriched): Turn off adaptive-fill-mode while
	executing enriched-decode.

2004-10-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-view.el (mime-view-insert-fontified-text-content): Inhibit
	font-lock when running the major-mode function instead of forcing
	execution of jit-lock.

2004-10-21  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mime-view.el (mime-view-insert-fontified-text-content): Use
	dummy absolute path in buffer-file-name. (by Katsumi Yamaoka)
	Force fontify for jit-lock-mode.

2004-09-27  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mime-edit.el (mime-edit-temp-message-buffer): Define.
	* mime-play.el (mime-view-temp-message-buffer): Ditto.
	(mime-preview-quitting-method-for-mime-show-message-mode): Change
	accordingly.

2004-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>
